Setting up navbar and entities

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html
- th:fragment="parent(content, title)"
- lang="en" 
- xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  class="light"
+  th:fragment="parent(content, title)"
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title th:replace="${title}"></title>
-    <link rel="stylesheet" data-th-href="@{'css/output.css'}">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
-</head>
-<body>
+    <link rel="stylesheet" data-th-href="@{'css/output.css'}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="dark:bg-gray-900 dark:text-white">
     <!-- common header -->
-    <ul class="p-4">
-        <li>
-            <a th:href="@{'/home'}">Home</a>
-        </li>
-        <li>
-            <a th:href="@{'/services'}">Services</a>
-        </li>
-        <li>
-           <a th:href="@{'/about'}">About</a>
-        </li>
-    </ul>
+    <div th:replace="navbar :: navbar"></div>
     <!-- main content -->
     <div class="p-4">
-        <section th:replace="${content}"></section>
+      <section th:replace="${content}"></section>
     </div>
     <!-- common footer -->
-    <footer class="p-4">Footer: </footer>
+    <footer class="p-4">Footer:</footer>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
-</body>
+    <script data-th-src="@{'/js/script.js'}"></script>
+  </body>
 </html>
